# runtime

./: CHANGELOG.md  CMakeLists.txt  README.md  vix.json
cmake/: KordexRuntimeConfig.cmake.in  KordexRuntimeOptions.cmake
examples/: CMakeLists.txt  create_runtime.cpp  load_manifest.cpp  run_file.cpp  spawn_process.cpp  timer.cpp
include/kordex/runtime/: Cancellation.hpp  Clock.hpp  Diagnostics.hpp  Error.hpp  Manifest.hpp  ModuleId.hpp  ModuleResolver.hpp  Process.hpp  Result.hpp  Runtime.hpp  RuntimeConfig.hpp  RuntimeLoop.hpp  RuntimeOptions.hpp  RuntimeResult.hpp  RuntimeState.hpp  SourceFile.hpp  Task.hpp  Timer.hpp  Version.hpp
src/: Cancellation.cpp  Clock.cpp  Diagnostics.cpp  Error.cpp  Manifest.cpp  ModuleId.cpp  ModuleResolver.cpp  Process.cpp  Runtime.cpp  RuntimeConfig.cpp  RuntimeLoop.cpp  RuntimeOptions.cpp  RuntimeResult.cpp  RuntimeState.cpp  SourceFile.cpp  Task.cpp  Timer.cpp  Version.cpp
tests/: CMakeLists.txt  test_cancellation.cpp  test_clock.cpp  test_diagnostics.cpp  test_error.cpp  test_manifest.cpp  test_module_id.cpp  test_module_resolver.cpp  test_process.cpp  test_runtime.cpp  test_runtime_config.cpp  test_runtime_loop.cpp  test_runtime_options.cpp  test_runtime_result.cpp  test_runtime_state.cpp  test_source_file.cpp  test_task.cpp  test_timer.cpp  test_version.cpp
